# livestream-server

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  server.py
lib/: __init__.py  config.py  templates.py  wav.py
public/: index.html  player.css  player.js
services/: __init__.py  broadcaster.py  connection.py  handlers.py
